--- a/index.html
+++ b/index.html
@@ -4,12 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/img/">
     <title>project-2</title>
     
 </head>
 <body>
-    <h1>tiêu đề</h1>
+    <header class="header">
+        <div class="content">
+            <nav class="nav-bar">
+                <div class="nav-logo">
+                    <img src="assets/img/Lesson..svg" alt="Lesson" class="img">
+                </div>
+                <div class="list-nav">
+                    <li class="active">
+                        <a href="#!">Home</a>
+                    </li>
+                    <li>
+                        <a href="#!">Courses</a>
+                    </li>
+                    <li>
+                        <a href="#!">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#!">Reviews</a>
+                    </li>
+                </div>
+                <div class="btn">
+                    <a href="#!">Sign up</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="hero">
+                <div class="content">
+                        <div class="img-hero">
+                        <img src="assets/img/guy-lesson 1.svg" alt="chang trai" class="img-first">
+                        <div class="img-child">
+                            <!-- #1 -->
+                            <div class="cover-img-child">
+                                    <img src="assets/img/icon-hero-1.svg" alt="">
+                                    <div class="content-img-child">
+                                        <p class="desc">20 Courses</p>
+                                        <p class="desc desc-bold">UI/UX Design</p>
+                                    </div>
+                            </div>
+                            <!-- #2 -->
+                                <div class="cover-img-child">
+                                    <img src="assets/img/icon-hero-2.svg" alt="">
+                                    <div class="content-img-child">
+                                        <p class="desc">20 Courses</p>
+                                        <p class="desc desc-bold">Development</p>
+                                    </div>
+                                </div>
+                            <!-- # -->
+                                <div class="cover-img-child">
+                                    <img src="assets/img/icon-hero-3.svg" alt="">
+                                    <div class="content-img-child">
+                                        <p class="desc">30 Courses</p>
+                                        <p class="desc desc-bold">Marketing</p>
+                                    </div>
+                                </div>
+                        </div>
+                        </div>
+                    <div class="content-hero">
+                        <div class="text">
+                            <h1 class="title">Learn without limits and spread knowledge.</h1>
+                            <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
+                        </div>
+                        <div class="see-more">
+                            <div class="btn"><a href="#!">See Courses</a></div>
+                            <img src="assets/img/nút ytb.svg" alt="mũi tên">
+                            <p>Watch Video</p>
+                        </div>        
+                            
+                            <div class="rate-students">
+                                <p class="desc">Recent engagement</p>
+                                <p class="desc"></p>
+                                <p class="desc"></p>
+                            </div>
+                    </div>
+                </div>
+        </div>
+    </main>
 </body>
 </html>
