--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
         <div class="hero">
                 <div class="content">
                         <div class="img-hero">
-                        <img src="assets/img/guy-lesson 1.svg" alt="chang trai" class="img-first">
+                        <div class="cover-img-hero">
+                            <img src="assets/img/guy-lesson 1.svg" alt="chang trai" class="img-first"></div>
                         <div class="img-child">
                             <!-- #1 -->
                             <div class="cover-img-child">
-                                    <img src="assets/img/icon-hero-1.svg" alt="">
+                                   <div class="circle-img">
+                                        <img src="assets/img/icon-hero-1.svg" alt="" class="icon-img">
+                                    </div>
                                     <div class="content-img-child">
                                         <p class="desc">20 Courses</p>
                                         <p class="desc desc-bold">UI/UX Design</p>
@@ -55,7 +58,9 @@
                             </div>
                             <!-- #2 -->
                                 <div class="cover-img-child">
-                                    <img src="assets/img/icon-hero-2.svg" alt="">
+                                    <div class="circle-img">
+                                        <img src="assets/img/icon-hero-2.svg" alt="" class="icon-img">
+                                    </div>
                                     <div class="content-img-child">
                                         <p class="desc">20 Courses</p>
                                         <p class="desc desc-bold">Development</p>
@@ -63,7 +68,9 @@
                                 </div>
                             <!-- # -->
                                 <div class="cover-img-child">
-                                    <img src="assets/img/icon-hero-3.svg" alt="">
+                                    <div class="circle-img">
+                                        <img src="assets/img/icon-hero-3.svg" alt="" class="icon-img">
+                                    </div>
                                     <div class="content-img-child">
                                         <p class="desc">30 Courses</p>
                                         <p class="desc desc-bold">Marketing</p>
@@ -84,8 +91,11 @@
                             
                             <div class="rate-students">
                                 <p class="desc">Recent engagement</p>
-                                <p class="desc"></p>
-                                <p class="desc"></p>
+                               <div class="cover-desc">
+                                <p class="title-text">50K <span class="desc-second">Students</span></p>
+                                <p class="title-text">70+ <span class="desc-second">Courses</span></p>
+                            
+                               </div>
                             </div>
                     </div>
                 </div>
