--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/img/">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>project-2</title>
     
 </head>
-<body>
-    <header class="header fixed">
+<body> 
+    <header class="header">
         <div class="content">
             <nav class="nav-bar ">
                 <div class="nav-logo">
@@ -104,8 +107,40 @@
                         
 
                     </div>
-                    </div>   
+                </div>   
                 </div>
+        </div>
+        <div class="popular">
+            <div class="content">
+                <div class="info">
+                    <div class="arrow-info"> 
+                        <h2 class="title lv-1">Our popular courses</h2>
+                        <p class="desc">Build new skills with new trendy courses and shine for tShe next future career.</p>
+                    </div>
+                    <div class="row-icon">
+                        <button class="btn-icon"><svg width="8" 
+                            height="14" viewBox="0 0 8 14" 
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 1L1 7L7 13" 
+                            stroke="currentcolor" 
+                            stroke-linecap="round"
+                            stroke-linejoin="round"/>
+                            </svg>
+                            </button>
+                        <button class="btn-icon">
+                            <svg width="8" 
+                            height="14" viewBox="0 0 8 14" 
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 1L1 7L7 13" 
+                            stroke="currentcolor" 
+                            stroke-linecap="round"
+                            stroke-linejoin="round"/>
+                            </svg></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
