--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
                         <p class="desc line-clamp">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.aaaaaasadasdasdasdasdasdasdasdasdasdsdasda</p>
                         <p class="desc">Lesson Impact Report (2022)</p>
                         <a href="#!" class="btn">Sign up</a>
+                        <blockquote>trích dẫn =lời thoại time to upon</blockquote>
                     </div>
+                    
                 </div>
             </div>
         </div>
